change test for evn.launch to be simpler